# buildingSegment

./: CMakeLists.txt  make.sh  readme.txt
dependencies/nanoflann/: KDTreeVectorOfVectorsAdaptor.h  README.origin  nanoflann.hpp
dependencies/program-options-lite/: program_options_lite.cpp  program_options_lite.h
dependencies/schroedinger/: COPYING  COPYING.MIT  COPYING.MPL  README.origin  schroarith.c  schroarith.h
scripts/: Makefile.tmc13-step  collect-tmc13.pl  gen-cfg.md  gen-cfg.pl  genversion.cmake
scripts/MPEG/PCC/: CSV.pm  Collate.pm  Util.pm
scripts/MPEG/PCC/Parse/: PcError.pm  Ply.pm  Time.pm  Tmc3.pm  Utils.pm
scripts/MPEG/PCC/Parse/Experiment/: Df.pm
tmc3/: Attribute.h  AttributeCommon.cpp  AttributeCommon.h  AttributeDecoder.cpp  AttributeDecoder.h  AttributeEncoder.cpp  AttributeEncoder.h  CMakeLists.txt  PCCMath.h  PCCPointSet.h  PCCTMC3Common.h  PCCTMC3Decoder.h  PCCTMC3Encoder.h  RAHT.cpp  RAHT.h  TMC3.cpp  coordinate_conversion.cpp  decoder.cpp  encoder.cpp  geometry.h  geometry_octree.cpp  geometry_octree.h  geometry_octree_decoder.cpp  geometry_octree_encoder.cpp  geometry_predictive.h  geometry_predictive_decoder.cpp  geometry_predictive_encoder.cpp  geometry_trisoup.h  geometry_trisoup_decoder.cpp  geometry_trisoup_encoder.cpp  hls.h  io_hls.cpp  io_hls.h  layerGroupSlicing.cpp  layerGroupSlicing.h  my_function.cpp  my_function.h  partitioning.cpp  quantization.h  tables.cpp
tools/: ply-merge.cpp
